--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -12,8 +12,8 @@ layout: default
 
       {% if paginator.posts %}
         {% assign collectiondata = site.collections | where: "label", page.collectionpage | first %}
-        <h1>{{ collectiondata.title }}</h1>
-        {{ collectiondata.description | markdownify }}
+        {% comment %} <h1>{{ collectiondata.title }}</h1>
+        {{ collectiondata.description | markdownify }} {% endcomment %}
 
       {% else %}
         <h1>{{ page.title }}</h1>
