--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -14,20 +14,21 @@ $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
 // Typography
-$bodytype: (font-family: "Georgia, serif",
+$bodytype: (font-family: 'Georgia, "Noto Sans KR", serif',
     regular: 400,
     bold: 700,
     italic: italic,
     cap-height: 0.75) !default;
 
-$headingtype: (font-family: '"Merriweather", serif',
+$headingtype: (font-family: '"Merriweather", "Noto Sans KR", serif',
     regular: 400,
     bold: 700,
     cap-height: 0.75) !default;
 
-$monospacetype: (font-family: "Menlo, monospace",
+$monospacetype: (font-family: 'Menlo, "Noto Sans KR", monospace',
     regular: 400,
     cap-height: 0.68) !default;
 
 // Font import, if you're using a non-standard web font
 @import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
